--- a/Linux/修改时区并同步时间.md
+++ b/Linux/修改时区并同步时间.md
@@ -3,11 +3,11 @@
 ## 修改时区
 
 1.  查看时区
-    > or@RespectfulShowy-VM:~$ date -R
-    > Tue, 12 Dec 2017 07:36:14 +0000
+    > date -R  
+    > Tue, 12 Dec 2017 07:36:14 +0000  
 
 1.  选择时区  
-    > * or@RespectfulShowy-VM:~$ sudo tzselect
+    > * sudo tzselect
     > 
     > > - 报错（ubuntu 14.04的一个bug）：  
     > >   /usr/bin/tzselect: line 171: /home/or/iso3166.tab: No such file or directory  
