修改ef笔记格式显示

--- a/EFCore/1. EFCore 初始化配置.md
+++ b/EFCore/1. EFCore 初始化配置.md
@@ -2,8 +2,8 @@
 
 ## EFCore官方教程
 
-    1. [ef-mvc 教程](https://docs.microsoft.com/en-us/aspnet/core/data/ef-mvc/)
-    1. [ef-mvc 教程 github 源码](https://github.com/aspnet/Docs/tree/master/aspnetcore/data/ef-mvc/intro/samples/cu-final)
+> 1. [ef-mvc 教程](https://docs.microsoft.com/en-us/aspnet/core/data/ef-mvc/)
+> 1. [ef-mvc 教程 github 源码](https://github.com/aspnet/Docs/tree/master/aspnetcore/data/ef-mvc/intro/samples/cu-final)
 
 ## 基础配置
 
