添加资料集合，数据库范式

--- a/EFCore/1. EFCore 初始化配置.md
+++ b/EFCore/1. EFCore 初始化配置.md
@@ -8,7 +8,8 @@
 ## 基础配置
 
 1. 引入依赖包
-    > MySql.Data.EntityFrameworkCore
+    > - MySql.Data.EntityFrameworkCore (官方，很多未完善)
+    > - Pomelo.EntityFrameworkCore.MySql (Pomelo，官方推荐)
 
 1. 添加上下文类和实体类
     > 
