--- a/C#基础/1. 并发编程/2. 异步编程基础.md
+++ b/C#基础/1. 并发编程/2. 异步编程基础.md
@@ -34,3 +34,7 @@
         > Thread.CurrentThread.ManagedThreadId2:5
         > ```
         > Test3().Result会阻塞主线程，等待Test3()中的线程执行完毕，会到主线程。Test3()中 `await client.GetAsync(url)`, 会尝试获取当前线程上下文，这个上下文正在被主线程占用，并未释放，至此互相等待引起死锁。更正为 `await client.GetAsync(url).ConfigureAwait(false)`，会从线程池获取线程上下文，可避免这种情况。
+        >
+        > .ConfigureAwait(false)，从线程池里获取新的线程，取消对SynchronizationContext的竞争。 .ConfigureAwait(true)，与主线程竞争SynchronizationContext
+        >
+        > **特别注意：.net core 取消了SynchronizationContext，不再有死锁**
