--- a/EFCore/2. 在EFCore中的CRUD.md
+++ b/EFCore/2. 在EFCore中的CRUD.md
@@ -38,8 +38,8 @@
 
 ## 防止加载不必要的字段
 
- 1. `BindAttribute`: `Bind["Course","Grade"] Student s`。较用于 `Creat`。
- 1. 使用 `TryUpdateModel` ,传入一组委托参数，指定要更新的字段。这个方法会从Form表单读取数据，较使用于 `Edit`。
+ 1. `BindAttribute`: `Bind["Course","Grade"] Student s`。较适用于 `Creat`。
+ 1. 使用 `TryUpdateModel` ,传入一组委托参数，指定要更新的字段。这个方法会从Form表单读取数据，较适用于 `Edit`。
  1. 使用 `View Model` ，适用于 `Creat` 和 `Edit` 场景。做法：将view model 作为类型参数，接收数据，然后将其所有属性复制（可使用 `AutoMapper` ）到要更改的类实例中，使用 `_context.Entry` 方法将实体状态更改为 `Unchanged` ，然后再逐个将需要应用修改的属性状态 `IsModified` 改为 `true` 。最终保存到数据库。
 
 > **主要**
@@ -176,6 +176,6 @@ public async Task<IActionResult> Edit(int id, [Bind("ID,EnrollmentDate,FirstMidN
 
 ## 其他
 
-1. 数据库连接什么时候释放
+1. 数据库连接什么时候释放  
     数据库上下文是由 `DI` 注入，`AddDbContext` 默认生命周期为 `Scope` ,生命周期之后，最终会释放数据库连接等资源。`Scope` 意味着一次请求结束，生命周期结束。为什么？这里的 `Scope` 很有可能是 `HttpContext.RequestServices` 这个 `ServiceProvider` 创建的，或者其 `子ServiceProvider` 创建的，而 `HttpContext` 每次请求结束会释放，so...
 1. 多个修改之后 `SaveChanges`，EFCore 隐式实现事务。
